.provarCaches/00D5f000005vwGkEAI/objects/rstk__icjobsetodc__c.object
<CustomObject>
    <description>icjobsetodc__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icjobsetodc_icjobset__r.rstk__externalid__c &amp; rstk__icjobsetodc_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icjobsetodc_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_altprice1__c</fullName>
        <description>Alternate Price 1</description>
        <label>Alternate Price 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_altprice2__c</fullName>
        <description>Alternate Price 2</description>
        <label>Alternate Price 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_desc__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_extaltprice1__c</fullName>
        <formula>rstk__icjobsetodc_altprice1__c  *  rstk__icjobsetodc_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Alternate Price 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_extaltprice2__c</fullName>
        <formula>rstk__icjobsetodc_altprice2__c  *  rstk__icjobsetodc_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Alternate Price 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_extcost__c</fullName>
        <formula>rstk__icjobsetodc_unitcst__c  *  rstk__icjobsetodc_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_extprice__c</fullName>
        <formula>rstk__icjobsetodc_unitprice__c  *  rstk__icjobsetodc_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_icjobcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Job Code</description>
        <label>Job Code</label>
        <referenceTo>rstk__icjobcode__c</referenceTo>
        <relationshipLabel>Job Set Other Direct Charges</relationshipLabel>
        <relationshipName>icjobsetodcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_icjobset__c</fullName>
        <description>Job Set ID</description>
        <label>Job Set ID</label>
        <referenceTo>rstk__icjobset__c</referenceTo>
        <relationshipLabel>Job Set Other Direct Charges</relationshipLabel>
        <relationshipName>icjobsetodcs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_poitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indirect / Service Item</description>
        <label>Indirect / Service Item</label>
        <referenceTo>rstk__poitem__c</referenceTo>
        <relationshipLabel>Job Set Other Direct Charges</relationshipLabel>
        <relationshipName>icjobsetodcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_qtyper__c</fullName>
        <description>Quantity Per</description>
        <label>Quantity Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_syodc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ODC Code</description>
        <label>ODC Code</label>
        <referenceTo>rstk__syodc__c</referenceTo>
        <relationshipLabel>Job Set Other Direct Charges</relationshipLabel>
        <relationshipName>icjobsetodcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_unitcst__c</fullName>
        <description>Unit Cost</description>
        <label>Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetodc_unitprice__c</fullName>
        <description>Unit Price</description>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <description>Trigger Options</description>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Job Set Other Direct Charges</label>
    <nameField>
        <label>Job Set Other Direct Charges  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Set Other Direct Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>